--- a/.github/workflows/ec2.yaml
+++ b/.github/workflows/ec2.yaml
@@ -23,13 +23,11 @@ jobs:
       - name: Create EC2 Instance
         run: |
           subnet_id=$(aws ec2 describe-subnets --filters "Name=tag:Numo123,Values=MyAppSubnet" --query "Subnets[0].SubnetId" --output text)
-          security_group_id=$(aws ec2 describe-security-groups --filters "Name=tag:Numo123,Values=MyAppSecurityGroup" --query "SecurityGroups[0].GroupId" --output text)
 
           aws ec2 run-instances \
             --image-id ami-0d52744d6551d851e \
             --instance-type t2.micro \
-            --key-name tushar-key \
-            --security-group-ids $security_group_id \
+            --key-name my-keypair \
             --subnet-id $subnet_id \
             --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=MyInstance}]' \
             --count 1
