--- a/.github/workflows/ec2.yaml
+++ b/.github/workflows/ec2.yaml
@@ -26,6 +26,6 @@ jobs:
           aws ec2 run-instances \
             --image-id ami-0d52744d6551d851e \
             --instance-type t2.micro \
-            --key-name my-keypair \
+            --key-name tushar-key \
             --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=MyInstance}]' \
             --count 1
