--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,15 +27,19 @@ jobs:
           terraform_version: 0.14.8
 
       - name: Terraform Init
+        working-directory: ./terraform
         run: terraform init
 
       - name: Terraform Plan
+        working-directory: ./terraform
         run: terraform plan -out=tfplan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        working-directory: ./terraform
         run: terraform apply -auto-approve tfplan
 
       - name: Terraform Destroy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        working-directory: ./terraform
         run: terraform destroy -auto-approve
